implement garage door logic

--- a/custom_components/localtuya/translations/en.json
+++ b/custom_components/localtuya/translations/en.json
@@ -117,7 +117,9 @@
                     "current_consumption": "Current Consumption",
                     "voltage": "Voltage",
                     "commands_set": "Open_Close_Stop Commands Set",
+                    "stop_enabled": "Enable Stop",
                     "positioning_mode": "Positioning mode",
+                    "current_status_dp": "Current Status",
                     "current_position_dp": "Current Position (for *position* mode only)",
                     "set_position_dp": "Set Position (for *position* mode only)",
                     "position_inverted": "Invert 0-100 position (for *position* mode only)",
